# English_study_equb_read

./: .env.local  .gitignore  README.md  cefr_engine_walkthrough.md  hybrid_dictionary_plan.md  implementation_plan.md  index.html  package-lock.json  package.json  setup.bat  tailwind.config.js  task.md  test_plan.md  test_report.md  tsconfig.json  verify_tests.md  vite.config.ts  vitest.config.ts  walkthrough.md
cefr-core/: Cargo.toml  build_err_utf8.txt  build_log.txt  check_log.txt  error.txt  lib_err.txt  output.txt  wasm_log.txt
cefr-core/.cargo/: config.toml
cefr-core/assets/: dictionary.csv
cefr-core/src/: dictionary.rs  discourse.rs  fst_dict.rs  lib.rs  names_code.rs  pos.rs  syntax.rs
electron/: cefrAnalyzer.ts  dictionary.ts  main.ts  preload.ts  store.ts  tsconfig.json
py_env/: analyzer.py  main.py  output.txt  pyproject.toml  result.json  test_analyzer.py  test_result.json  test_sample.txt
scripts/: build_analyzer.py  dump_dict.js  import_dict.ts  merge_dictionaries.js  package-lock.json  package.json
src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
src/components/: AudioPlayer.tsx  Auth.tsx  BookStatsPopup.tsx  CefrAnalysis.tsx  GrammarAnalysisPopup.css  GrammarAnalysisPopup.tsx  Reader.css  Reader.tsx  TranslationPopup.css  TranslationPopup.tsx  WordDetailPopup.tsx
src/context/: ThemeContext.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useReadingTime.ts  useSwipeNavigation.ts
src/lib/: supabase.ts
src/services/: BackupService.ts  BaiduTranslationProvider.ts  BookSyncService.ts  CategoryStore.ts  DictionaryService.ts  (+15 more)
(+40 files in other folders)
