[package]
name = "cefr-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
viterbi_pos_tagger = "0.1"
aho-corasick = "1.1"
regex = "1.10"
rust-stemmers = "1.2"
lazy_static = "1.4"
serde-wasm-bindgen = "0.6"
phf = { version = "0.11", features = ["macros"] }
fst = "0.4"
byteorder = "1.5"
memmap2 = "0.9"
flate2 = "1.0"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
